@startuml
skinparam dpi 120
skinparam classAttributeIconSize 0
skinparam nodesep 50
skinparam ranksep 70
skinparam linetype ortho
hide empty members
left to right direction





/' Objects '/

namespace RayTracer {
	class AmbientLight {
		+AmbientLight(double brightness)
		+AmbientLight(const AmbientLight &)
		+~AmbientLight()
		+operator=(const AmbientLight &) : AmbientLight&
		+isAmbient() : bool {query}
		-_brightness : double
		+getAmbient() : double {query}
		+illuminate(const Math::Point3D &, Math::Vector3D &, double& intensity) : void {query}
	}

	class DirectionalLight {
		+DirectionalLight(const Math::Vector3D& toLight, double intensity)
		+DirectionalLight(const DirectionalLight &)
		+~DirectionalLight()
		+operator=(const DirectionalLight &) : DirectionalLight&
		-_toLight : Math::Vector3D
		+isAmbient() : bool {query}
		-_intensity : double
		+getAmbient() : double {query}
		+illuminate(const Math::Point3D &, Math::Vector3D& direction, double& intensity) : void {query}
	}

	class FlatColor {
		+FlatColor(const Color& color)
		+FlatColor(double r, double g, double b)
		+FlatColor(double r, double g, double b, double specular, double shininess)
		+FlatColor(const FlatColor &)
		+~FlatColor()
		-_color : Color
		+getColor() : Color {query}
		+operator=(const FlatColor &) : FlatColor&
		-_shininess : double
		-_specular : double
		+getShininess() : double {query}
		+getSpecular() : double {query}
	}

	abstract class ILight {
		+ILight()
		+ILight(const ILight &)
		+~ILight()
		+operator=(const ILight &) : ILight&
		+{abstract} isAmbient() : bool {query}
		+{abstract} getAmbient() : double {query}
		+{abstract} illuminate(const Math::Point3D& point, Math::Vector3D& direction, double& intensity) : void {query}
	}

	abstract class IMaterial {
		+IMaterial()
		+IMaterial(const IMaterial &)
		+~IMaterial()
		+{abstract} getColor() : Color {query}
		+operator=(const IMaterial &) : IMaterial&
		+getReflectivity() : double {query}
		+getShininess() : double {query}
		+getSpecular() : double {query}
	}

	class PointLight {
		+PointLight(const Math::Point3D& position, double intensity)
		+PointLight(const PointLight &)
		+~PointLight()
		-_position : Math::Point3D
		+operator=(const PointLight &) : PointLight&
		+isAmbient() : bool {query}
		-_intensity : double
		+getAmbient() : double {query}
		+illuminate(const Math::Point3D& point, Math::Vector3D& direction, double& intensity) : void {query}
	}

	class ReflectiveMaterial {
		+ReflectiveMaterial(double r, double g, double b, double reflectivity, double specular, double shininess)
		+ReflectiveMaterial(const ReflectiveMaterial &)
		+~ReflectiveMaterial()
		-_color : Color
		+getColor() : Color {query}
		+operator=(const ReflectiveMaterial &) : ReflectiveMaterial&
		-_reflectivity : double
		-_shininess : double
		-_specular : double
		+getReflectivity() : double {query}
		+getShininess() : double {query}
		+getSpecular() : double {query}
	}
}





/' Inheritance relationships '/

RayTracer.ILight <|-- RayTracer.AmbientLight


RayTracer.ILight <|-- RayTracer.DirectionalLight


RayTracer.ILight <|-- RayTracer.PointLight


RayTracer.IMaterial <|-- RayTracer.FlatColor


RayTracer.IMaterial <|-- RayTracer.ReflectiveMaterial





/' Aggregation relationships '/





/' Nested objects '/



@enduml
